--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-mastodonk = "0.1-alpha10"
+mastodonk = "0.1-alpha11"
 
 [libraries]
 mastodonk-core = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
@@ -7,4 +7,5 @@ mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.r
 androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-alpha03"
 androidx-appcompat = "androidx.appcompat:appcompat:1.2.0"
 androidx-core = "androidx.core:core-ktx:1.3.1"
+androidx-paging-compose = "androidx.paging:paging-compose:1.0.0-alpha08"
 junit = "junit:junit:4.13"
