--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,7 +2,8 @@
 mastodonk = "0.1-alpha13"
 
 [libraries]
-mastodonk-core = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
+mastodonk-core-common = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
+mastodonk-core-jvm = { module = "fr.outadoc.mastodonk:mastodonk-core-jvm", version.ref = "mastodonk" }
 mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
 androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-alpha03"
 androidx-appcompat = "androidx.appcompat:appcompat:1.2.0"
