--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,3 +10,4 @@ androidx-appcompat = "androidx.appcompat:appcompat:1.2.0"
 androidx-core = "androidx.core:core-ktx:1.3.1"
 androidx-paging-compose = "androidx.paging:paging-compose:1.0.0-alpha08"
 junit = "junit:junit:4.13"
+kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
