--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ mastodonk-core-common = { module = "fr.outadoc.mastodonk:mastodonk-core", versio
 mastodonk-core-jvm = { module = "fr.outadoc.mastodonk:mastodonk-core-jvm", version.ref = "mastodonk" }
 mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
 androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-alpha03"
-androidx-appcompat = "androidx.appcompat:appcompat:1.2.0"
+androidx-appcompat = "androidx.appcompat:appcompat:1.3.0-rc01"
 androidx-core = "androidx.core:core-ktx:1.3.1"
 androidx-paging-compose = "androidx.paging:paging-compose:1.0.0-alpha08"
 junit = "junit:junit:4.13"
