--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,3 +11,4 @@ androidx-core = "androidx.core:core-ktx:1.3.1"
 androidx-paging-compose = "androidx.paging:paging-compose:1.0.0-alpha08"
 junit = "junit:junit:4.13"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
+kodein = "org.kodein.di:kodein-di-framework-compose:7.5.0"
