--- a/common/src/androidMain/AndroidManifest.xml
+++ b/common/src/androidMain/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.outadoc.mastodonk.common">
+    package="fr.outadoc.woolly.common">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
