--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,11 +4,12 @@ mastodonk = "0.1-alpha13"
 [libraries]
 mastodonk-core-common = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
 mastodonk-core-jvm = { module = "fr.outadoc.mastodonk:mastodonk-core-jvm", version.ref = "mastodonk" }
-mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
+mastodonk-paging-common = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
+mastodonk-paging-jvm = { module = "fr.outadoc.mastodonk:mastodonk-paging-jvm", version.ref = "mastodonk" }
 androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-alpha03"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0-rc01"
 androidx-core = "androidx.core:core-ktx:1.3.1"
-androidx-paging-compose = "androidx.paging:paging-compose:1.0.0-alpha08"
+androidx-paging = "androidx.paging:paging-common:3.0.0"
 junit = "junit:junit:4.13"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.5.0"
