feat(status): add timestamp

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,3 +13,4 @@ androidx-paging = "androidx.paging:paging-common:3.0.0"
 junit = "junit:junit:4.13"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.5.0"
+kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.2.0"
