--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-alpha03"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0-rc01"
 androidx-core = "androidx.core:core-ktx:1.3.1"
 androidx-paging = "androidx.paging:paging-common:3.0.0"
+androidx-preference = "androidx.preference:preference-ktx:1.1.1"
 junit = "junit:junit:4.13"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.5.0"
