--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,6 +16,7 @@ junit = "junit:junit:4.13"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.5.0"
 kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.2.0"
+kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-engine-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
