--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,22 +1,22 @@
 [versions]
 mastodonk = "0.1-alpha19"
-ktor = "1.5.3"
+ktor = "1.6.1"
 
 [libraries]
 mastodonk-core-common = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
 mastodonk-core-jvm = { module = "fr.outadoc.mastodonk:mastodonk-core-jvm", version.ref = "mastodonk" }
 mastodonk-paging-common = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
 mastodonk-paging-jvm = { module = "fr.outadoc.mastodonk:mastodonk-paging-jvm", version.ref = "mastodonk" }
-androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-alpha03"
-androidx-appcompat = "androidx.appcompat:appcompat:1.3.0-rc01"
+androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-rc01"
+androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
 androidx-browser = "androidx.browser:browser:1.3.0"
-androidx-core = "androidx.core:core-ktx:1.3.1"
+androidx-core = "androidx.core:core-ktx:1.6.0"
 androidx-paging = "androidx.paging:paging-common:3.0.0"
 androidx-preference = "androidx.preference:preference-ktx:1.1.1"
-junit = "junit:junit:4.13"
-kamel = "com.alialbaali.kamel:kamel-image:0.2.0"
-kodein = "org.kodein.di:kodein-di-framework-compose:7.5.0"
-kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.2.0"
+junit = "junit:junit:4.13.2"
+kamel = "com.alialbaali.kamel:kamel-image:0.2.1"
+kodein = "org.kodein.di:kodein-di-framework-compose:7.6.0"
+kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.2.1"
 kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-engine-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
