--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-rc01"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
 androidx-browser = "androidx.browser:browser:1.3.0"
 androidx-core = "androidx.core:core-ktx:1.6.0"
-androidx-paging = "androidx.paging:paging-common:3.0.0"
+androidx-paging = "androidx.paging:paging-common:3.1.0-alpha02"
 androidx-preference = "androidx.preference:preference-ktx:1.1.1"
 junit = "junit:junit:4.13.2"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.1"
