--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ androidx-core = "androidx.core:core-ktx:1.6.0"
 androidx-paging = "androidx.paging:paging-common:3.1.0-alpha02"
 androidx-preference = "androidx.preference:preference-ktx:1.1.1"
 junit = "junit:junit:4.13.2"
+jsoup = "org.jsoup:jsoup:1.13.1"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.1"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.6.0"
 kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.2.1"
