--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+datastore = "1.0.0-rc01"
 mastodonk = "0.1-alpha19"
 ktor = "1.6.1"
 
@@ -11,6 +12,8 @@ androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-rc01"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
 androidx-browser = "androidx.browser:browser:1.3.0"
 androidx-core = "androidx.core:core-ktx:1.6.0"
+androidx-datastore-android = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
+androidx-datastore-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
 androidx-paging = "androidx.paging:paging-common:3.1.0-alpha02"
 androidx-preference = "androidx.preference:preference-ktx:1.1.1"
 junit = "junit:junit:4.13.2"
