chore(di): extract DI into files, fix rotation crash by better scoping

--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="fr.outadoc.woolly.android">
 
     <application
+        android:name="fr.outadoc.woolly.android.WoollyApplication"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:label="@string/app_name"
