--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-kotlin.code.style=official
+org.gradle.jvmargs=-Xmx4096M
 android.useAndroidX=true
+kotlin.code.style=official
 kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
-
-org.gradle.jvmargs=-Xmx4096M
+kotlin.mpp.stability.nowarn=true
