--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 datastore = "1.0.0-rc01"
 decompose = "0.2.6"
-mastodonk = "0.1-alpha25"
+mastodonk = "0.1-alpha26"
 ktor = "1.6.1"
 
 [libraries]
@@ -9,10 +9,8 @@ appdirs = "net.harawata:appdirs:1.2.1"
 decompose-android = { module = "com.arkivanov.decompose:extensions-android", version.ref = "decompose" }
 decompose-core = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-jb = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
-mastodonk-core-common = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
-mastodonk-core-jvm = { module = "fr.outadoc.mastodonk:mastodonk-core-jvm", version.ref = "mastodonk" }
-mastodonk-paging-common = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
-mastodonk-paging-jvm = { module = "fr.outadoc.mastodonk:mastodonk-paging-jvm", version.ref = "mastodonk" }
+mastodonk-core = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
+mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
 androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-rc01"
 androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
 androidx-browser = "androidx.browser:browser:1.3.0"
