--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ androidx-datastore-android = { module = "androidx.datastore:datastore-preference
 androidx-datastore-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
 androidx-paging = "androidx.paging:paging-common:3.1.0-alpha02"
 androidx-preference = "androidx.preference:preference-ktx:1.1.1"
+androidx-splashscreen = "androidx.core:core-splashscreen:1.0.0-alpha01"
 junit = "junit:junit:4.13.2"
 jsoup = "org.jsoup:jsoup:1.13.1"
 kamel = "com.alialbaali.kamel:kamel-image:0.2.1"
