--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -29,3 +29,4 @@ kotlinx-coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-engine-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+systemthemedetector = "com.github.Dansoftowner:jSystemThemeDetector:3.6"
