--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -10,29 +10,7 @@ on:
     branches: [ develop ]
 
 jobs:
-  build-desktop:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: gradle
-
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-
-    - name: Build desktop app
-      run: ./gradlew app-desktop:build
-
-    - name: Package desktop app
-      run: ./gradlew app-desktop:package
-
-  build-android:
+  build:
     runs-on: ubuntu-latest
 
     steps:
@@ -50,3 +28,6 @@ jobs:
 
     - name: Build Android app
       run: ./gradlew app-android:assembleRelease
+
+    - name: Build desktop app
+      run: ./gradlew app-desktop:package
