--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,5 @@
 org.gradle.jvmargs=-Xmx4096M
+org.gradle.parallel=true
 android.useAndroidX=true
 kotlin.code.style=official
 kotlin.mpp.enableGranularSourceSetsMetadata=true
