--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -29,7 +29,8 @@ jobs:
     - name: Android Lint
       run: ./gradlew app-android:lint
 
-    - uses: yutailang0119/action-android-lint@v1
+    - name: Parse Lint report
+      uses: yutailang0119/action-android-lint@v1
       with:
         report-path: app-android/build/reports/*.xml
         continue-on-error: false
