--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
-datastore = "1.0.0-rc01"
+datastore = "1.0.0"
 decompose = "0.4.0"
-mastodonk = "0.1-alpha38"
-ktor = "1.6.1"
-coroutines = "1.6.1"
+mastodonk = "0.2-alpha04"
+ktor = "2.3.2"
+coroutines = "1.7.2"
 
 [libraries]
 appdirs = "net.harawata:appdirs:1.2.1"
@@ -12,25 +12,27 @@ decompose-core = { module = "com.arkivanov.decompose:decompose", version.ref = "
 decompose-jb = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
 mastodonk-core = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
 mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
-androidx-activity-compose = "androidx.activity:activity-compose:1.3.0-rc01"
-androidx-appcompat = "androidx.appcompat:appcompat:1.3.0"
-androidx-browser = "androidx.browser:browser:1.3.0"
-androidx-core = "androidx.core:core-ktx:1.6.0"
+androidx-activity-compose = "androidx.activity:activity-compose:1.7.2"
+androidx-appcompat = "androidx.appcompat:appcompat:1.6.1"
+androidx-browser = "androidx.browser:browser:1.5.0"
+androidx-core = "androidx.core:core-ktx:1.10.1"
 androidx-datastore-android = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 androidx-datastore-core = { module = "androidx.datastore:datastore-preferences-core", version.ref = "datastore" }
 androidx-paging = "androidx.paging:paging-common:3.1.0-alpha02"
-androidx-preference = "androidx.preference:preference-ktx:1.1.1"
-androidx-splashscreen = "androidx.core:core-splashscreen:1.0.0-alpha01"
+androidx-preference = "androidx.preference:preference-ktx:1.2.0"
+androidx-splashscreen = "androidx.core:core-splashscreen:1.0.1"
 junit = "junit:junit:4.13.2"
-jsoup = "org.jsoup:jsoup:1.13.1"
+jsoup = "org.jsoup:jsoup:1.15.3"
 kamel = "com.alialbaali.kamel:kamel-image:0.3.0"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.6.0"
-kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.2.1"
+kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.4.0"
 kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "coroutines" }
 ktor-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-contentNegociation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-engine-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
-ktor-serialization = { module = "io.ktor:ktor-client-serialization", version.ref = "ktor" }
+ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 mokoResources = "dev.icerock.moko:resources:0.23.0"
 systemthemedetector = "com.github.Dansoftowner:jSystemThemeDetector:3.6"
