--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -26,7 +26,7 @@ androidx-preference = "androidx.preference:preference-ktx:1.2.0"
 androidx-splashscreen = "androidx.core:core-splashscreen:1.0.1"
 junit = "junit:junit:4.13.2"
 jsoup = "org.jsoup:jsoup:1.15.3"
-kamel = "com.alialbaali.kamel:kamel-image:0.3.0"
+kamel = "media.kamel:kamel-image:0.6.1"
 kodein = "org.kodein.di:kodein-di-framework-compose:7.6.0"
 kotlinx-datetime = "org.jetbrains.kotlinx:kotlinx-datetime:0.4.0"
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
