--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ appdirs = "net.harawata:appdirs:1.2.1"
 decompose-android = { module = "com.arkivanov.decompose:extensions-android", version.ref = "decompose" }
 decompose-core = { module = "com.arkivanov.decompose:decompose", version.ref = "decompose" }
 decompose-jb = { module = "com.arkivanov.decompose:extensions-compose-jetbrains", version.ref = "decompose" }
+desugar = { module = "com.android.tools:desugar_jdk_libs", version = "2.0.3" }
 mastodonk-core = { module = "fr.outadoc.mastodonk:mastodonk-core", version.ref = "mastodonk" }
 mastodonk-paging = { module = "fr.outadoc.mastodonk:mastodonk-paging", version.ref = "mastodonk" }
 androidx-activity-compose = "androidx.activity:activity-compose:1.7.2"
