Fix crash on Android

--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -13,8 +13,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:configChanges="uiMode"
-            android:label="@string/all_appName">
+            android:configChanges="uiMode">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
