--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/all_appName"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Woolly.Main">
+        android:theme="@style/Theme.Woolly.Splash">
 
         <activity
             android:name=".MainActivity"
