--- a/app-android/src/main/AndroidManifest.xml
+++ b/app-android/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.outadoc.woolly.android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
         android:name="fr.outadoc.woolly.android.WoollyApplication"
@@ -9,13 +8,12 @@
         android:label="@string/all_appName"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Woolly.Main">
+        android:theme="@style/Theme.Woolly.Splash">
 
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:configChanges="uiMode"
-            android:label="@string/all_appName">
+            android:configChanges="uiMode">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
