--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -38,5 +38,6 @@ ktor-contentNegociation = { module = "io.ktor:ktor-client-content-negotiation", 
 ktor-engine-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 ktor-serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+material-components = "com.google.android.material:material:1.9.0"
 mokoResources = "dev.icerock.moko:resources:0.23.0"
 systemthemedetector = "com.github.Dansoftowner:jSystemThemeDetector:3.6"
